# Hey-capsule

./: .gitignore  AGENTS.md  COMPONENT_REFERENCE.md  Cargo.toml  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_SETUP_CHECKLIST.md  LICENSE  MODERNIZATION_SUMMARY.md  QUICK_START.md  README.md
.github/workflows/: build-prebuilt.yml  verify-dist.yml
capsules/blobs-provider/: Cargo.toml  capsule.json
capsules/blobs-provider/src/: main.rs
capsules/content-provider/: Cargo.toml  capsule.json
capsules/content-provider/src/: main.rs
capsules/docs-provider/: Cargo.toml  capsule.json
capsules/docs-provider/src/: main.rs
capsules/hey-chat/: Cargo.toml  README.md  capsule.json  index.html  styles.css
capsules/hey-chat-cli/: Cargo.toml
capsules/hey-chat-cli/src/: main.rs
capsules/hey-chat/src/: crypto.rs  lib.rs  main.rs  media.rs
capsules/hey-chat/src/api/: dms.rs
capsules/hey-core/: Cargo.toml  README.md
capsules/hey-core/src/: crypto.rs  ctx.rs  events.rs  identity.rs  lib.rs  peer_receiver.rs  plat.rs  runtime.rs  session.rs
capsules/hey-core/src/api/: dms.rs  frag.rs  mod.rs  outbox.rs
capsules/hey-messenger/: README.md  capsule.json
capsules/hey-messenger/client/: index.html  package-lock.json  package.json  vite.config.js
capsules/hey-messenger/client/src/: App.jsx  main.jsx
capsules/hey-messenger/client/src/api/: passkey.js
capsules/hey-messenger/client/src/components/: AttachmentPill.jsx  ChannelList.jsx  Composer.jsx  Conversation.jsx  EncryptionBadge.jsx  Inspector.jsx  SignInGate.jsx  WorkspaceRail.jsx
capsules/hey-messenger/client/src/data/: mock.js
capsules/hey-messenger/client/src/lib/: identity.js  inbox.js  keystore.js  markdown.js  profile.js  runtime.js  session.js
capsules/hey-messenger/client/src/state/: store.jsx
capsules/hey-messenger/src/: lib.rs
capsules/hey-social/: Cargo.toml  README.md  capsule.json  index.html  welcome-animations.css
capsules/hey-social-cli/: Cargo.toml
capsules/hey-social-cli/src/: main.rs
capsules/hey-social-rust/: Cargo.toml  capsule.json  index.html  welcome-animations.css
capsules/hey-social-rust/scripts/: deploy-local.sh  deploy-remote.sh
capsules/hey-social-rust/src/: app_modals.rs  components.rs  events.rs  identity.rs  lib.rs  passkey.rs  peer_receiver.rs  runtime.rs  session.rs
capsules/hey-social-rust/src/api/: dms.rs  mod.rs  outbox.rs  posts.rs  profile.rs
capsules/hey-social-rust/src/components/: add_friend_modal.rs  floating_dock.rs  header.rs  icons.rs  mod.rs  modal.rs  new_group_modal.rs  notification_panel.rs  post_card.rs  search_modal.rs
capsules/hey-social-rust/src/pages/: chat.rs  clips.rs  home.rs  landing.rs  misc.rs  mod.rs  onboarding.rs  post_detail.rs  posts.rs  profile.rs  signin.rs  signup.rs  video_player.rs
capsules/hey-social/client/: tailwind.config.cjs
capsules/hey-social/client/src/: index.css  main.jsx
capsules/hey-social/client/src/api/: passkey.js
capsules/hey-social/src/: app_modals.rs  crypto.rs  events.rs  lib.rs  main.rs  passkey.rs  peer_receiver.rs  runtime.rs  session.rs
capsules/hey-social/src/api/: dms.rs  groups.rs  posts.rs  profile.rs
capsules/hey-social/src/components/: add_friend_modal.rs  conn_badge.rs  contacts_panel.rs  floating_dock.rs  following_panel.rs  header.rs  icons.rs  link_phone_modal.rs  mod.rs  modal.rs  network_settings_modal.rs  post_card.rs
capsules/hey-social/src/pages/: chat.rs  clips.rs  home.rs  landing.rs  onboarding.rs  post_detail.rs  posts.rs  profile.rs
capsules/peer-provider/: Cargo.toml  capsule.json
capsules/peer-provider/src/: main.rs
capsules/webrtc-signal-provider/: Cargo.toml  capsule.json
capsules/webrtc-signal-provider/src/: main.rs
classifier_server/: Readme.md  podman.sh
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/api/: auth.js  chat.js  passkey.js
client/src/components/: AddFriendModal.jsx  CreateRoomModal.jsx  FloatingDock.jsx  HeyVideoPlayer.jsx  ImageCarousel.jsx  ImageDropzone.jsx  NotificationPanel.jsx  PasskeyManagerModal.jsx  PostCard.jsx  ProfileEditModal.jsx  QRBadge.jsx  ReactionPicker.jsx  SafeMedia.jsx  SearchModal.jsx  icons.jsx
client/src/hooks/: useProfile.js  useReveal.js
client/src/lib/: identity.js  runtime.js  session.js  shell.js
client/src/pages/: Chat.jsx  Clips.jsx  Home.jsx  Landing.jsx  Onboarding.jsx  PostDetail.jsx  Posts.jsx  Profile.jsx  SignIn.jsx  SignUp.jsx  VideoPlayer.jsx
docs/: HEY_LITE_FORK_DESIGN.md  architecture-audit-2026-05.md  garlic-overlay.md  hey-core-migration.md  runtime-contract.md  runtime-quick-reference.md
mobile/hey-chat/src/: index.html
mobile/hey-chat/src-tauri/: Cargo.toml  tauri.conf.json
mobile/hey-chat/src-tauri/capabilities/: mobile.json
mobile/hey-chat/src-tauri/icons/: icon.icns
mobile/hey-chat/src-tauri/src/: lib.rs  main.rs
mobile/hey-shell/: .gitignore
mobile/hey-shell/scripts/: hey-push.sh  ntfy-local.sh
mobile/hey-shell/src/: index.html  styles.css
mobile/hey-shell/src-tauri/: Cargo.toml  tauri.conf.json
mobile/hey-shell/src-tauri/icons/: icon.icns
mobile/hey-social/: README.md
mobile/hey-social/src/: index.html  main.js
mobile/hey-social/src-tauri/: Cargo.toml  tauri.conf.json
mobile/hey-social/src-tauri/capabilities/: default.json
mobile/hey-social/src-tauri/icons/: icon.icns
mobile/hey-social/src-tauri/src/: push.rs
server/: app.js  eslint.config.js  package-lock.json  package.json
server/controllers/: chat.controller.js  notification.controller.js  passkey.controller.js  post.controller.js  user.controller.js
server/data/: db.json
server/middlewares/: auth.js  optionalAuth.js
server/routes/: chat.route.js  notification.route.js  passkey.route.js  post.route.js  user.route.js
server/uploads/: e9c33a39-54d4-4084-83e9-ab4c82254154.avif
server/uploads/avatars/: 505503f5-ec5d-4e50-b1a4-aed03b720c85-1779661176165.avif
server/utils/: db.js  db.test.js  env.js  events.js  events.test.js  logger.js  media.js  notifications.js  secrets.js  video.js
(+20 files in other folders)
