[workspace]
resolver = "2"
members = [
    "capsules/blobs-provider",
    "capsules/docs-provider",
    "capsules/webrtc-signal-provider",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
