[workspace]
# Convenience workspace for development at the pack root —
# `cargo build` here builds all three providers in one go.
# Each provider is also a self-contained crate so it can be built
# standalone when the runtime fetches it (no workspace inheritance).
#
# hey-social is a wasm32-only Leptos crate; build it with
# `trunk build` from its directory, not `cargo build` at the root.
resolver = "2"
members = [
    "capsules/blobs-provider",
    "capsules/content-provider",
    "capsules/docs-provider",
    "capsules/identity-projection-provider",
    "capsules/peer-provider",
    "capsules/hey-social",
    # Shared chat engine (rlib) consumed by hey-social + hey-chat.
    # wasm32-only — kept out of default-members (see below).
    "capsules/hey-core",
    # Rust/Leptos messenger (Telegram-desktop replacement) — wasm32-only,
    # built with trunk; kept out of default-members like hey-social.
    "capsules/hey-chat",
    # Native headless diagnostic CLI for the cross-runtime DM flow — drives
    # hey-core natively. Build explicitly with `cargo build -p hey-chat-cli`.
    "capsules/hey-chat-cli",
    # Native headless diagnostic CLI for the hey-social FOLLOW + post-feed flow
    # — drives the same hey-core transport/identity/content natively and speaks
    # hey-social's interoperable events (follow.request / posts.head / index).
    # Build explicitly with `cargo build -p hey-social-cli`.
    "capsules/hey-social-cli",
]
default-members = [
    "capsules/blobs-provider",
    "capsules/content-provider",
    "capsules/docs-provider",
    "capsules/identity-projection-provider",
    "capsules/peer-provider",
]

[profile.release]
opt-level = 3
lto = true

