[package]
name = "blobs-provider"
description = "iroh-blobs direct peer-to-peer file transfer for hey-messenger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true

iroh = "1.0.0-rc.1"
iroh-blobs = "0.102"
n0-future = "0.2"

[[bin]]
name = "blobs-provider"
path = "src/main.rs"

[[bin]]
name = "blobs-transfer-test"
path = "src/bin/transfer_test.rs"
