[package]
name = "content-provider"
description = "elastos://content/* — pin + replicate policy over the host's kubo IPFS daemon. Replaces direct ipfs-provider access for app capsules."
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync", "time"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

[[bin]]
name = "content-provider"
path = "src/main.rs"
