[package]
name = "hey-core"
description = "Shared chat engine for the Hey capsule pack — PQ-E2E crypto, did:key identity, signed events, Carrier transport, and the sealed-sender DM workflow. Consumed by hey-social and hey-chat as a path rlib so the security-critical core stays byte-identical across both apps."
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

# Plain rlib (default crate-type) — NOT cdylib. The wasm bin crates
# (hey-social, hey-chat) pull this in via `hey-core = { path = "../hey-core" }`
# and Trunk compiles the final wasm. This crate is wasm32-only (it pulls
# getrandom('js') + web-sys); it is deliberately excluded from the
# workspace `default-members` so a host-target `cargo build` at the root
# does not try to build it.

[dependencies]
# ── Pure security core — platform-agnostic, used on BOTH wasm + native ─
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# dms.rs renders invite-link QR codes to inline SVG.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
ed25519-compact = { version = "2", default-features = false }
base64 = "0.22"
sha2 = "0.10"
# Post-quantum E2E for DMs — hybrid ML-KEM-768 + X25519 + ChaCha20Poly1305.
# Versions/features MUST match hey-social's Cargo.toml exactly so the
# envelope stays byte-identical (HKDF_INFO = "hey-messenger/hpq-1").
ml-kem = "0.2"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc", "rand_core"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["std"] }

# ── Browser (wasm32) platform: fetch + localStorage + Date.now + console ─
# The shared engine is wasm32-only when consumed by hey-social/hey-chat;
# these back `plat.rs`'s wasm arm. NOT compiled for the native CLI target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# uuid v4 + getrandom need the 'js' RNG shim on wasm.
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
  # runtime.rs HTTP transport boundary + session.rs sessionStorage wipe.
  "Window",
  "Location",
  "History",
  "UrlSearchParams",
  "Request",
  "RequestInit",
  "RequestCredentials",
  "Response",
  "Headers",
  "Storage",
  "console",
] }

# ── Native (CLI) platform: std time/sleep/TcpStream/files back plat.rs ─
# No extra crates needed — the loopback HTTP client is hand-rolled on std,
# so the native build is pure-Rust and links static (musl) with no C deps.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1", features = ["v4"] }
getrandom = { version = "0.2" }
