[package]
name = "hey-social-rust"
description = "Hey Social — Rust + Leptos + WASM port of the photo/video/chat capsule"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http", "json"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
ed25519-compact = { version = "2", default-features = false }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Location",
  "UrlSearchParams",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlVideoElement",
  "HtmlImageElement",
  "Blob",
  "File",
  "FileList",
  "FileReader",
  "Storage",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbTransaction",
  "CredentialsContainer",
  "PublicKeyCredential",
  "Navigator",
  "Clipboard",
  "console",
]

