[package]
name = "peer-provider"
description = "Decentralized gossip node backing the elastos://peer/* scheme — iroh-gossip P2P across runtimes, with a same-runtime in-memory fan-in. Zero-config."
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["HeyElastos"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time", "net", "fs"] }
n0-future = "0.2"
bytes = "1"
blake3 = "1"
base64 = "0.22"
# iroh-gossip 0.100 pins iroh "=1.0.0-rc.1" — the exact line blobs-provider
# already uses, so the workspace resolves to a single iroh.
iroh = "1.0.0-rc.1"
iroh-gossip = "0.100"

[[bin]]
name = "peer-provider"
path = "src/main.rs"
