[package]
name = "hey-shell"
version = "0.1.0"
description = "Hey — a remote window onto your Elastos runtime (hey-social + hey-chat)"
authors = ["HeyElastos"]
edition = "2021"
rust-version = "1.77"

# Detach from the capsule-pack workspace at the repo root: this is a native
# (non-wasm) Tauri app and must not inherit the wasm workspace's settings.
[workspace]

[lib]
# Tauri mobile loads the app through this cdylib; `main.rs` calls `run()`.
name = "hey_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
# ntfy push receiver: hold a streaming HTTP connection to the self-hosted ntfy
# topic. http-only (no TLS feature) keeps the Android cross-compile clean for a
# local/LAN ntfy; add "rustls-tls" here if you later expose ntfy over https.
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }

# Camera QR scanning — mobile only (uses the device camera). Lets the phone
# scan the "Link phone" QR shown by desktop hey-social and auto-connect.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[features]
# Used by `tauri build` / the bundler. DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]
